--- a/templates/filebeat.yml.j2
+++ b/templates/filebeat.yml.j2
@@ -1,12 +1,12 @@
 {% if ansible_distribution == "CentOS" %}
-output.centos:
+output.elasticsearch:
   hosts: ["http://{{ hostvars['el-centos']['ansible_facts']['default_ipv4']['address'] }}:9200"]
-setup.centos:
+setup.kibana:
   host: "http://{{ hostvars['k-centos']['ansible_facts']['default_ipv4']['address'] }}:5601"
 {% else %}
-output.debian:
+output.elasticsearch:
   hosts: ["http://{{ hostvars['el-deb']['ansible_facts']['default_ipv4']['address'] }}:9200"]
-setup.debian:
+setup.kibana:
   host: "http://{{ hostvars['k-deb']['ansible_facts']['default_ipv4']['address'] }}:5601"
 {% endif %}
 
