--- a/templates/filebeat.yml.j2
+++ b/templates/filebeat.yml.j2
@@ -1,11 +1,34 @@
+filebeat.inputs:
+- type: log
+  enabled: true
+  paths:
+      - /var/log/nginx/*-access.log
+  fields:
+    type: nginx_access
+  fields_under_root: true
+  scan_frequency: 5s
+
+- type: log
+  enabled: true
+  paths:
+      - /var/log/nginx/*-error.log
+  fields:
+    type: nginx_error
+  fields_under_root: true
+  scan_frequency: 5s
+
 {% if ansible_distribution == "CentOS" %}
-output.elasticsearch:
-  hosts: ["http://{{ hostvars['el-centos']['ansible_facts']['default_ipv4']['address'] }}:9200"]
+#output.elasticsearch:
+#  hosts: ["http://{{ hostvars['el-centos']['ansible_facts']['default_ipv4']['address'] }}:9200"]
+output.logstash:
+  hosts: ["http://{{ hostvars['el-centos']['ansible_facts']['default_ipv4']['address'] }}:5044"]
 setup.kibana:
   host: "http://{{ hostvars['k-centos']['ansible_facts']['default_ipv4']['address'] }}:5601"
 {% else %}
-output.elasticsearch:
-  hosts: ["http://{{ hostvars['el-deb']['ansible_facts']['default_ipv4']['address'] }}:9200"]
+#output.elasticsearch:
+#  hosts: ["http://{{ hostvars['el-deb']['ansible_facts']['default_ipv4']['address'] }}:9200"]
+output.logstash:
+  hosts: ["http://{{ hostvars['el-deb']['ansible_facts']['default_ipv4']['address'] }}:5044"]
 setup.kibana:
   host: "http://{{ hostvars['k-deb']['ansible_facts']['default_ipv4']['address'] }}:5601"
 {% endif %}
